added a basic JS mouse event that which shows or hides the items on mouse over/leave

--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
 <head>
-    <title>Dro Down Menu
+    <title>Dro Down Menu</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+<div class="navbar">
+    <button  class="menu">
+        <span class="material-icons">
+            menu
+            </span>
+            <div class="items">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+            </div>
+    </button>
+  
+</div>
+
+
+    <script src="script.js"></script>
+</body>
 </html>
