--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 </head>
 <body>
 <div class="navbar">
-    <button  class="menu">
+    <div class="menu">
         <span class="material-icons">
             menu
             </span>
             <div class="items">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
+                <div class="item">Products</div>
+                <div class="item">Blog</div>
+                <div class="item">About Us</div>
+                <div class="item">Comments</div>
+                <div class="item">Contact</div>
+           
             </div>
     </button>
   
